<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Marei Launcher</string>
    <string name="user_name">Marei</string>
    <string name="start">Start</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for apps</string>
    <string name="pinned">Pinned</string>
    <string name="all_apps">All apps</string>
    <string name="back">Back</string>
    <string name="results">Results</string>
    <string name="start_empty">Long-press any app to pin it here.</string>
    <string name="no_results">No apps match that search.</string>
    <string name="pin_start">Pin to Start</string>
    <string name="unpin_start">Unpin from Start</string>
    <string name="pin_desktop">Add to desktop</string>
    <string name="unpin_desktop">Remove from desktop</string>
    <string name="pin_taskbar">Pin to taskbar</string>
    <string name="unpin_taskbar">Unpin from taskbar</string>
    <string name="app_info">App info</string>
    <string name="uninstall">Uninstall</string>
    <string name="taskbar_full">Taskbar is full. Unpin an app first.</string>
    <string name="icon_line">Line icons</string>
    <string name="icon_original">Original colors</string>
    <string name="home_settings">Choose default home app</string>
    <string name="personalize">Personalize</string>
    <string name="settings">Settings</string>
    <string name="open_failed">Couldn\'t open %1$s</string>
</resources>
